--- a/wizards/WizardsWeb/Views/Search/Index.cshtml
+++ b/wizards/WizardsWeb/Views/Search/Index.cshtml
@@ -1,17 +1,20 @@
-﻿@model IEnumerable<WizardsWeb.ModelViews.PlayerDetailsDto.PlayerDetailsDto>
+﻿@using WizardsWeb.ModelViews.RankingModelViews
+@model WizardsWeb.ModelViews.RankingModelViews.RankingModelViews
+
 
 @{
     ViewData["Title"] = "Index";
 }
 
+
 <h1>Index</h1>
 
 <div class="row">
-   @* <div class="col-md-4">
-        <form asp-action="SearchUsers">
+    <div class="col-md-4">
+        <form asp-action="Index">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="U" class="control-label"></label>
+                <label asp-for="UserName" class="control-label"></label>
                 <input asp-for="UserName" class="form-control" />
                 <span asp-validation-for="UserName" class="text-danger"></span>
             </div>
@@ -38,31 +41,31 @@
                 <input type="submit" value="Search" class="btn btn-warning"/>
             </div>
         </form>
-    </div>*@
+    </div>
 </div>
 <table id="myTable" class="table table-striped table-bordered dt-responsive nowrap">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.UserName)
+                @Html.DisplayNameFor(model => model.PlayerDetailsDto.FirstOrDefault().UserName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Email)
+                @Html.DisplayNameFor(model => model.PlayerDetailsDto.FirstOrDefault().Email)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.HeroNumber)
+                @Html.DisplayNameFor(model => model.PlayerDetailsDto.FirstOrDefault().HeroNumber)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.RankNumber)
+                @Html.DisplayNameFor(model => model.PlayerDetailsDto.FirstOrDefault().RankNumber)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.GoldHeroNumber)
+                @Html.DisplayNameFor(model => model.PlayerDetailsDto.FirstOrDefault().GoldHeroNumber)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+@foreach (var item in Model.PlayerDetailsDto) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.UserName)
