--- a/wizards/WizardsWeb/Views/Shared/_Layout.cshtml
+++ b/wizards/WizardsWeb/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                             <a class="nav-link text-white disabled" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white disabled" asp-area="" asp-controller="Search" asp-action="Index">Privacy</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Search" asp-action="Index">Ranking</a>
                         </li>
                     </ul>
                     <div>
