--- a/wizards/WizardsWeb/Views/Player/Delete.cshtml
+++ b/wizards/WizardsWeb/Views/Player/Delete.cshtml
@@ -42,9 +42,9 @@
 <div class="col-md-6">
     <form asp-action="Delete">
         <div class="form-group">
-            <label asp-for="PasswordToConfirmDelete" class="control-label"></label>
-            <input asp-for="PasswordToConfirmDelete" class="form-control"/>
-            <span asp-validation-for="PasswordToConfirmDelete" class="text-danger"></span>
+            <label asp-for="PasswordConfirm" class="control-label"></label>
+            <input asp-for="PasswordConfirm" class="form-control"/>
+            <span asp-validation-for="PasswordConfirm" class="text-danger"></span>
         </div>
         <input type="submit" value="Delete" class="btn btn-danger" />
     </form>
