--- a/wizards/WizardsWeb/Views/Player/EditPassword.cshtml
+++ b/wizards/WizardsWeb/Views/Player/EditPassword.cshtml
@@ -14,9 +14,9 @@
         <form asp-action="EditPassword">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="EnterOldPassword" class="control-label"></label>
-                <input asp-for="EnterOldPassword" class="form-control" />
-                <span asp-validation-for="EnterOldPassword" class="text-danger"></span>
+                <label asp-for="CurrentPassword" class="control-label"></label>
+                <input asp-for="CurrentPassword" class="form-control" />
+                <span asp-validation-for="CurrentPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="NewPassword" class="control-label"></label>
